--- a/Gorilla-AdminManager-GUI/Frontend/style.css
+++ b/Gorilla-AdminManager-GUI/Frontend/style.css
@@ -303,6 +303,11 @@ body {
 	padding: 16px 0;
 }
 
+#incoming_requests_data tr {
+	cursor: pointer;
+}
+
+
 /* Design the left column */
 #content main .table-data .order table tr td:first-child {
 	display: flex;
@@ -324,8 +329,12 @@ body {
 }
 
 #blacklist_table table tbody tr td a img:hover {
-	opacity: 0.6;
+	opacity: 0.7;
 	cursor: pointer;
+}
+
+#blacklist_table table tbody tr td a img:active {
+	opacity: 0.3;
 }
 
 
@@ -372,9 +381,38 @@ body {
 	height: 36px;
 }
 
-#blacklist_table form div button img:hover {
-	opacity: 0.6;
+#blacklist_table form div button:hover {
+	opacity: 0.7;
 	cursor: pointer;
+}
+
+#blacklist_table form div button:active {
+	opacity: 0.3;
+}
+
+/* -----------------------------------------[ REFRESH BUTTON ]----------------------------------------- */
+.refresh_button {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 36px;
+	width: 36px;
+	background: transparent;
+	border: none;
+}
+
+.refresh_button:hover {
+	opacity: 0.7;
+	cursor: pointer;
+}
+
+.refresh_button:active {
+	opacity: 0.3;
+}
+
+.refresh_button img {
+	width: 36px;
+	height: 36px;
 }
 
 /* -----------------------------------------[ CUSTOMIZE SCREEN FOR DIFFERENT DEVICES ] ----------------------------------------- */
