Done Allowed URLs

--- a/Gorilla-AdminManager-GUI/Frontend/style.css
+++ b/Gorilla-AdminManager-GUI/Frontend/style.css
@@ -285,7 +285,7 @@ body {
 }
 
 /* Space after block's explanation */
-#content main .table-data p {
+#content main .table-data .order .explanation {
 	margin-bottom: 20px;
 }
 
