--- a/Gorilla-AdminManager-GUI/Frontend/style.css
+++ b/Gorilla-AdminManager-GUI/Frontend/style.css
@@ -19,18 +19,9 @@
 /* Set the title image design (in index.html [Home page]) */
 .title-home-img {
 	display: block;
-	margin: 0 10px;
+	margin-left: auto;
+	margin-right: auto;
 	width: 40%;
-}
-.image-container {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-.vertical-line {
-	height: 110px;
-	border-left: 1px solid #000;
-	margin: 0 20px;
 }
 
 /* Remove all the underline from the links */
